Fixed up build process